--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,71 @@
-.App {
+input,
+label,
+button {
+  font-size: 20px;
+  margin: 5px;
+}
+
+/* do cwiczenia lista menu */
+/* body {
+  font-size: 20px;
+  font-family: sans-serif;
+}
+
+li {
+  line-height: 160%;
+  padding: 20px 10px;
+  cursor: pointer;
+}
+
+li:nth-child(even) {
+  background-color: gainsboro;
+}
+
+li:nth-child(odd) {
+  background-color: white;
+} */
+
+/* do cwiczenia drugiego */
+/* div {
+  line-height: 70px;
+  font-size: 30px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+button {
+  background-color: white;
+  border: 2px solid black;
+  font-weight: bold;
+  font-size: 30px;
+  width: 70px;
+  height: 70px;
+  cursor: pointer;
+  outline: none;
+  margin: 10px;
+}
+
+button:disabled {
+  opacity: 0.3;
+} */
+
+
+/* do cwiczenia pierwszego */
+/* body {
   text-align: center;
+  overflow: hidden;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.title {
+  font-family: Arial, Helvetica, sans-serif;
+  padding: 30px;
+  font-size: 50px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+input[type="text"],
+button {
+  margin: 2px;
+  padding: 10px 30px;
+  border: solid black 2px;
+  font-size: 30px;
+  outline: none;
+} */
